--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.4.0",
-    "mongoose": "^5.8.1",
-    "passport": "^0.4.1",
-    "passport-http-bearer": "^1.0.1"
+    "cors": "2.8.5",
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "jsonwebtoken": "8.5.1",
+    "mongodb": "4.12.1",
+    "mongoose": "6.8.0",
+    "passport": "0.6.0",
+    "passport-http-bearer": "1.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
